archive/apps/mediabox/app/calibre-ingress.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/networking.k8s.io/ingress_v1.json
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: calibre
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: network-auth@kubernetescrd
    hajimari.io/icon: television-box
spec:
  ingressClassName: external
  tls:
    - secretName: ${SECRET_DOMAIN/./-}-production-tls
      hosts:
        - calibre.${SECRET_DOMAIN}
  rules:
    - host: calibre.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: calibre
                port:
                  number: 8080
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/v1/service_v1.json
apiVersion: v1
kind: Service
metadata:
  name: calibre
spec:
  ports:
    - name: calibre
      port: 8080
      protocol: TCP
      targetPort: 8080
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: calibre-extern
  labels:
    kubernetes.io/service-name: calibre
addressType: IPv4
ports:
  - port: 8080
    protocol: TCP
endpoints:
  - addresses:
      - 10.100.100.13
    conditions:
      ready: true
