archive/apps/mediabox/app/lldap-ingress.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/networking.k8s.io/ingress_v1.json
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lldap
  annotations:
    hajimari.io/icon: account-group
spec:
  ingressClassName: internal
  tls:
    - secretName: ${SECRET_DOMAIN/./-}-production-tls
      hosts:
        - lldap.${SECRET_DOMAIN}
  rules:
    - host: lldap.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lldap
                port:
                  number: 17170
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/v1/service_v1.json
apiVersion: v1
kind: Service
metadata:
  name: lldap
spec:
  ports:
    - name: lldap
      port: 17170
      protocol: TCP
      targetPort: 17170
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: lldap-extern
  labels:
    kubernetes.io/service-name: lldap
addressType: IPv4
ports:
  - port: 17170
    protocol: TCP
endpoints:
  - addresses:
      - 10.20.30.40
    conditions:
      ready: true
