archive/apps/mediabox/app/notifiarr-ingress.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/networking.k8s.io/ingress_v1.json
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notifiarr
  annotations:
    hajimari.io/enable: "false"
spec:
  ingressClassName: external
  tls:
    - secretName: ${SECRET_DOMAIN/./-}-production-tls
      hosts:
        - notifiarr.${SECRET_DOMAIN}
  rules:
    - host: notifiarr.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: notifiarr
                port:
                  number: 5454
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/v1/service_v1.json
apiVersion: v1
kind: Service
metadata:
  name: notifiarr
spec:
  ports:
    - name: notifiarr
      port: 5454
      protocol: TCP
      targetPort: 5454
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: notifiarr-extern
  labels:
    kubernetes.io/service-name: notifiarr
addressType: IPv4
ports:
  - port: 5454
    protocol: TCP
endpoints:
  - addresses:
      - 10.100.100.11
    conditions:
      ready: true
