archive/apps/mediabox/app/prowlarr-ingress.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/networking.k8s.io/ingress_v1.json
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prowlarr
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: network-auth@kubernetescrd
    hajimari.io/icon: plex
spec:
  ingressClassName: external
  tls:
    - secretName: ${SECRET_DOMAIN/./-}-production-tls
      hosts:
        - prowlarr.${SECRET_DOMAIN}
  rules:
    - host: prowlarr.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prowlarr
                port:
                  number: 9696
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/v1/service_v1.json
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
spec:
  ports:
    - name: prowlarr
      port: 9696
      protocol: TCP
      targetPort: 9696
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: prowlarr-extern
  labels:
    kubernetes.io/service-name: prowlarr
addressType: IPv4
ports:
  - port: 9696
    protocol: TCP
endpoints:
  - addresses:
      - 10.100.100.5
    conditions:
      ready: true
