archive/apps/mediabox/app/radarr-ingress.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/networking.k8s.io/ingress_v1.json
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: network-auth@kubernetescrd
    hajimari.io/icon: filmstrip
spec:
  ingressClassName: external
  tls:
    - secretName: ${SECRET_DOMAIN/./-}-production-tls
      hosts:
        - radarr.${SECRET_DOMAIN}
  rules:
    - host: radarr.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: radarr
                port:
                  number: 7878
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/v1/service_v1.json
apiVersion: v1
kind: Service
metadata:
  name: radarr
spec:
  ports:
    - name: radarr
      port: 7878
      protocol: TCP
      targetPort: 7878
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: radarr-extern
  labels:
    kubernetes.io/service-name: radarr
addressType: IPv4
ports:
  - port: 7878
    protocol: TCP
endpoints:
  - addresses:
      - 10.100.100.7
    conditions:
      ready: true
