archive/apps/mediabox/app/sonarr-ingress.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/networking.k8s.io/ingress_v1.json
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: network-auth@kubernetescrd
    hajimari.io/icon: television-box
spec:
  ingressClassName: external
  tls:
    - secretName: ${SECRET_DOMAIN/./-}-production-tls
      hosts:
        - sonarr.${SECRET_DOMAIN}
  rules:
    - host: sonarr.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sonarr
                port:
                  number: 8989
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/v1/service_v1.json
apiVersion: v1
kind: Service
metadata:
  name: sonarr
spec:
  ports:
    - name: sonarr
      port: 8989
      protocol: TCP
      targetPort: 8989
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: sonarr-extern
  labels:
    kubernetes.io/service-name: sonarr
addressType: IPv4
ports:
  - port: 8989
    protocol: TCP
endpoints:
  - addresses:
      - 10.100.100.2
    conditions:
      ready: true
